# MLOps-Serverless

./: .gitignore  pyproject.toml
src/: .env  environment_variables.sh
src/deployment_dir/: cerebrium.toml  main.py  requirements.txt
src/deployment_dir/src/: baseline_model.py  data.py  hyperparams.py  model_registry_api.py  predict.py  preprocessing.py  train.py
